  synchronisation problems by first writing a temporary file and then
  creating a hardlink to the actual filename. This works badly on filesystems
  that do not allow hard links, such as VFAT. If creating the hardlink
  fails, Obnam now further tries to use the `open(2)` system call with
  the `O_EXCL` flag to create the target file. This should allow things
  to work with both NFS and VFAT.

Bug fixes:

* Empty values for extended attributes are now backed up correctly.
  Previously they would cause an infinite loop.
* An empty port number in sftp URLs is now handled correctly. Found based
  on report by Anton Shevtsov.
* A bad performance bug when backing up full systems (starting from the
  filesystem root directory) has been fixed. At the beginning of each
  generation, Obnam removes any directories that are not part of the
  current backup roots. This is necessary so that if you change the
  backup roots, the old stuff doesn't hang around forever. However, when
  the backup root is the filesystem root, due to the now-fixed bug Obnam
  would first remove everything, and then back it up all over again. This
  "worked", but was quite slow. Thanks to Nix for reporting the problem.

Version 1.2, released 2012-10-06
--------------------------------

* Added a note to `--node-size` that it only affects new B-trees.
  Thanks, Michael Brown.
* New `obnam diff` subcommand to show differences (added/removed/modified
  files) between two generations, by Peter Valdemar Mørch.
* `obnam backup` now logs the names of files that are getting backed up
  at the INFO level rather than DEBUG.
* The command synopsises for backup, restore, and verify commands now
  make it clearer that Obnam only accepts directories, not individual
  files, as arguments. (For now.)
* The output from the `show` plugin can now be redirected with the
  `--output=FILE` option. Affected subcommands: `clients`, `generations`,
  `genids`, `ls`, `diff`, `nagios-last-backup-age`.

Bug fixes:
